--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/body-parser": "^1.17.0",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
+    "@types/node": "^12.6.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
