--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/body-parser": "^1.17.0",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
+    "@types/multer": "^1.3.7",
     "@types/node": "^12.6.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "multer": "^1.4.1",
     "mysql2": "^1.6.5",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.7.7",
